reorgnized the work tree

--- a/angular-bookstore/src/styles.css
+++ b/angular-bookstore/src/styles.css
@@ -1,9 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.min.css";
+@import "~@fortawesome/fontawesome-free/css/all.min.css";
+
+
+
 @font-face{
     font-family: 'Oswald';
     src: url(/assets/fonts/Oswald/static/Oswald-Regular.ttf) format("truetype");
 }
 
-body{
+h1{
     font-family: 'Oswald';
+
+}
+
+body{
+    padding-top: 56px;
 }
