turn list display into grid and add cart

--- a/angular-bookstore/src/styles.css
+++ b/angular-bookstore/src/styles.css
@@ -17,3 +17,30 @@ h1{
 body{
     padding-top: 56px;
 }
+
+body,htmal{
+    height: 100%;
+
+}
+
+.footer{
+    position:absolute;
+    bottom: 10px;
+    height: 60px;
+}
+.wrapper{
+    min-height: 100%;
+    position: relative;
+}
+.content{
+    padding-bottom: 100px;
+}
+
+
+
+
+
+
+
+
+
