--- a/angular-bookstore/src/app/components/book-list/book-grid.component.html
+++ b/angular-bookstore/src/app/components/book-list/book-grid.component.html
@@ -7,9 +7,10 @@
 
    
     <div class="list-group">
-      <a href="#" class="list-group-item">Category 1</a>
-      <a href="#" class="list-group-item">Category 2</a>
-      <a href="#" class="list-group-item">Category 3</a>
+      <a routerLink="/category/1" class="list-group-item" routerLinkActive="bg-primary text-white font-weight-bold">
+        Web Development</a>
+      <a routerLink="/category/2" class="list-group-item" routerLinkActive="bg-primary text-white font-weight-bold">
+        Programming</a>
     </div>
 
   </div>
