--- a/angular-bookstore/src/app/components/book-list/book-grid.component.html
+++ b/angular-bookstore/src/app/components/book-list/book-grid.component.html
@@ -14,7 +14,7 @@
   <div class="col-lg-9">
 
    
-    <div class="row">
+    
       <div class="row">
         <div class="col-lg-4 col-md-6 mb-4" *ngFor="let book of books">
             <div class="card h-100">
@@ -31,9 +31,12 @@
               </div>
             </div>
           </div>
+          
     </div>
-
-    </div>
+      <div *ngIf="books?.length == 0" class="col-md-12 alert alert-warning mt-30">
+                  No book found!
+                </div>
+    
     <!-- /.row -->
 
   </div>
