add routerlink to back btn

--- a/angular-bookstore/src/app/components/search/search.component.html
+++ b/angular-bookstore/src/app/components/search/search.component.html
@@ -8,5 +8,5 @@
         
     <button type="submit" 
             (click)="searchBooks(searchInput.value)"
-            class="btn btn-primary">Search</button>    
+            class="btn btn-primary ml-1">Search</button>    
   </div>
