--- a/angular-bookstore/src/app/components/book-details/book-details.component.html
+++ b/angular-bookstore/src/app/components/book-details/book-details.component.html
@@ -27,11 +27,11 @@
            <h4>Price: <strong>&#36;200</strong></h4>
            <hr/>
 
-           <a class="btn btn-success">
+           <a routerLink="/books" class="btn btn-success">
                <i class="fas fa-arrow-left"></i> Back
            </a>
 
-           <a class="btn btn-primary">
+           <a href="#" class="btn btn-primary ml-1">
             <i class="fas fa-cart-arrow-down"></i> Add to Cart
            </a>
        </div>
