--- a/angular-bookstore/src/app/components/book-list/book-grid.component.html
+++ b/angular-bookstore/src/app/components/book-list/book-grid.component.html
@@ -24,7 +24,8 @@
             <p class="card-text ">{{book.description}}</p>
           </div>
           <div class="card-footer">
-            <button class="btn btn-primary float-right">Add Cart</button>
+            <button class="btn btn-primary float-right">
+              <i class="fas fa-cart-arrow-down"></i> Add to Cart</button>
           </div>
         </div>
       </div>
