--- a/angular-bookstore/src/app/components/book-list/book-grid.component.html
+++ b/angular-bookstore/src/app/components/book-list/book-grid.component.html
@@ -15,10 +15,11 @@
     <div class="row">
       <div class="col-lg-4 col-md-6 mb-4" *ngFor="let book of books">
         <div class="card h-100">
-          <a href="/books/{{book.id}}"><img class="card-img-top img-responsive" [src]="book.imageUrl" height="250" width="100"></a>
+          <a routerLink="/books/{{book.id}}">
+            <img class="card-img-top img-responsive" [src]="book.imageUrl" height="250" width="100"></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="/books/{{book.id}}">{{book.name}}</a>
+              <a routerLink="/books/{{book.id}}">{{book.name}}</a>
             </h4>
             <h5>{{book.unitPrice | currency: 'USD'}}</h5>
             <p class="card-text ">{{book.description}}</p>
