install jw-angular-component and add it to Ngmodule

--- a/angular-bookstore/src/app/components/book-details/book-details.component.html
+++ b/angular-bookstore/src/app/components/book-details/book-details.component.html
@@ -12,12 +12,13 @@
   
   
       <div class="row">
+        <!-- <this is for image> -->
        <div class="col-12 col-md-4">
             <div class="thumbnail">
                 <img src="{{book.imageUrl}}" width="250" height="300" />
             </div>
        </div>
-
+        <!--this is for detail-->
        <div class="col-12 col-md-8">
            <h3>{{book.name}}</h3>
            <hr/>
