--- a/angular-bookstore/src/app/components/book-list/book-grid.component.html
+++ b/angular-bookstore/src/app/components/book-list/book-grid.component.html
@@ -13,7 +13,7 @@
 
 
     <div class="row">
-      <div class="col-lg-4 col-md-6 mb-4" *ngFor="let book of books">
+      <div class="col-lg-4 col-md-6 mb-4" *ngFor="let book of books | paginate: { itemsPerPage: 3, currentPage: p }">
         <div class="card h-100">
           <a routerLink="/books/{{book.id}}">
             <img class="card-img-top img-responsive" [src]="book.imageUrl" height="250" width="100"></a>
@@ -22,7 +22,7 @@
               <a routerLink="/books/{{book.id}}">{{book.name}}</a>
             </h4>
             <h5>{{book.unitPrice | currency: 'USD'}}</h5>
-            <p class="card-text ">{{book.description}}</p>
+            <p class="card-text text-truncate">{{book.description}}</p>
           </div>
           <div class="card-footer">
             <button class="btn btn-primary float-right">
@@ -37,7 +37,8 @@
     </div>
 
     <!-- /.row -->
-
+    <!-- pageination selector goes here -->
+    <pagination-controls (pageChange)="p = $event"></pagination-controls>
   </div>
   <!-- /.col-lg-9 -->
 
